# detect-prompt-injection

./: .env_example  .gitignore  Dockerfile  Dockerfile_dev  Dockerfile_w_frontend  Makefile  README.md  predict.py  pyproject.toml  start_w_frontend.sh  train.py
app/: main.py  utils.py
data/: benign_2k_en_prompts.csv  benign_2k_es_prompts.csv  benign_prompts_dataset.csv  jailbreak_detection_dataset.csv  jailbreak_examples.csv  mixed_en_prompts.csv  negative_100_es_prompts.csv  negative_700_es_prompts.csv
data/processed/: df_benign_english.csv  df_benign_spanish.csv  processed_employee_data.csv
data/raw/: Prompt Engineering.parquet
docker_dev/: Dockerfile_dev  Dockerfile_dev_w_frontend
notebooks/: 01_spanish_jailbreak_creation.ipynb  01b_spanish_benign_prompts.ipynb  01c_data_checks.ipynb  02_notebook_finetuning.ipynb  02b_notebook_finetuning.ipynb  03_upload_model_to_HF.ipynb  04_calling_GCP_deployed_model.ipynb  2a - EDA.ipynb  EDA.ipynb  notebook.ipynb  upload-model-to-HF.ipynb
src/: dummy_predict.py  predict.py  train.py  utils.py
