[tool.poetry]
name = "final project"
version = "0.1.0"
description = ""
authors = ["Ana Belen Barbero <anabarberocastejon@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.2.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pyarrow = "^18.1.0"
huggingface-hub = "^0.27.0"
transformers = {extras = ["torch"], version = "^4.47.1"}
python-dotenv = "^1.0.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
nltk = "^3.9.1"
scikit-learn = "^1.6.0"
evaluate = "^0.4.3"
google-cloud = "^0.34.0"
google-auth = "^2.37.0"
google-cloud-run = "^0.10.14"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
