[tool.poetry]
name = "final project"
version = "0.1.0"
description = ""
authors = ["Ana Belen Barbero <anabarberocastejon@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.2.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pyarrow = "^18.1.0"
huggingface-hub = "^0.27.0"
#transformers = {extras = ["torch"], version = "^4.47.1"}
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
torch = {version = "^2.5.1+cu121", source = "pytorch"}
transformers = "^4.47.1"
accelerate = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
nltk = "^3.9.1"
scikit-learn = "^1.6.0"
evaluate = "^0.4.3"
google-cloud = "^0.34.0"
google-auth = "^2.37.0"
google-cloud-run = "^0.10.14"
openai = "^1.59.4"
## poethepoet = "^0.32.0"

## [tool.poe.tasks]
## PyTorch with CUDA 11.1. If PyTorch is imported first, importing Tensorflow will detect CUDA + cuDNN bundled with PyTorch
## Run with the command "poe force-cuda11"
## See https://github.com/python-poetry/poetry/issues/2543
## force-cuda11 = "pip install torch==2.4.1 xformers --index-url https://download.pytorch.org/whl/cu121"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
